package com.example.demo.domain.entities;

public enum OrderStatus {
    PENDING,
    FULFILLED
}